# recfusion

./: CMakeLists.txt  CMakePresets.json  README.md  cfusion.cpp  env.yaml  run.py
configs/a2c/: a2c.yaml
configs/ppo/: ppo.yaml
fusion/agents/: buffer.py  core.py
fusion/agents/ppo/: __init__.py  _ppo.py  ppo.py
fusion/agents/random_agent/: __init__.py  agent.py
fusion/cc/: ccfusion.py
fusion/environments/: __init__.py  environment_loop.py  fusion_env.py  subprocess_env.py
fusion/io/: __init__.py  ctg_benchmark.py  opengm_benchmark.py  opengm_file_format_converter.py  snap.py
fusion/networks/: __init__.py  graph_layers.py  graph_networks.py  mlp.py
fusion/utils/: __init__.py  conversion_utils.py  data_utils.py  environment_utils.py  run_utils.py
